--- a/heroes/src/app/components/about/about.component.html
+++ b/heroes/src/app/components/about/about.component.html
@@ -12,7 +12,7 @@
             </a> 
         </div>
         <div class="hidden lg:mt-0 lg:col-span-5 lg:flex">
-            <img src="" alt="mockup">
+            <img src="../../../assets/img/favicon.ico" alt="mockup">
         </div>                
     </div>
 </section>
