--- a/heroes/src/app/components/heroes/heroes.component.html
+++ b/heroes/src/app/components/heroes/heroes.component.html
@@ -4,7 +4,7 @@
 
 <div class="cards-container animated fadeIn fast">
     
-    <div *ngFor="let heroe of heroesList" class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 animated fadeIn fast"  >
+    <div *ngFor="let heroe of heroesList; let i = index" class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 animated fadeIn fast"  >
         <a href="#">
             <img class="rounded-t-lg" src="{{heroe.img}}" alt="" />
         </a>
@@ -21,7 +21,7 @@
             <hr>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">{{heroe.bio}}</p>
             <div class="see-more">
-                <a href="#" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                <a [routerLink] = "['/heroe',i]" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     see more
                     <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
