--- a/heroes/src/app/components/heroe/heroe.component.html
+++ b/heroes/src/app/components/heroe/heroe.component.html
@@ -5,7 +5,7 @@
         <div class="mt-4 md:mt-0">
             <img class="logo" src={{img}} alt="logo">
             <div class="container-name">
-                <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">{{heroe.nombre}}</h2>
+                <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">{{heroe.nombre | uppercase }}</h2>
                 <p>{{heroe.aparicion}}</p>
             </div>
             <p class="mb-6 font-light text-gray-500 md:text-lg dark:text-gray-400">{{heroe.bio}}</p>
