--- a/heroes/src/app/components/heroe/heroe.component.html
+++ b/heroes/src/app/components/heroe/heroe.component.html
@@ -6,7 +6,7 @@
             <img class="logo" src={{img}} alt="logo">
             <div class="container-name">
                 <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">{{heroe.nombre | uppercase }}</h2>
-                <p>{{heroe.aparicion}}</p>
+                <p>{{heroe.aparicion | date:'y'}}</p>
             </div>
             <p class="mb-6 font-light text-gray-500 md:text-lg dark:text-gray-400">{{heroe.bio}}</p>
             <a routerLink="/heroes" class="inline-flex items-center text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:focus:ring-primary-900">
